# MvpGeneratorPlugin

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
script_demo/: CMakeLists.txt  XXX.pro  build-qt.sh  build.gradle  build_debug.sh
src/main/kotlin/osp/leobert/plugins/qt/mvpgenerator/: GenerateMvpAction.kt  InputDialog.kt
src/main/resources/templates/: INamePresenter.h  INameView.h  NamePresenter.cpp  NamePresenter.h  NameWindow.cpp  NameWindow.h  NameWindow.ui
